<resources>
    <string name="app_name">BiteBook Project</string>
    <string name="bite_book_name">BiteBook</string>
    <string name="bite_book_name_2.0">Bite\nBook</string>
    <string name="logo_background">Logo Background</string>
    <string name="logo">Logo</string>
    <string name="sign_in_button_text">Sign In</string>
    <string name="sign_up_button_text">Sign Up</string>
    <string name="username">Username</string>
    <string name="password">Password</string>"
    <string name="forgot_password">Forgot Password?"</string>
    <string name="remember_me">Remember me</string>
    <string name="or_sign_in_with">or sign in with</string>
    <string name="google_button">Google</string>
    <string name="facebook_button">Facebook</string>
    <string name="facebook_login_button">Continue with Facebook</string>
    <string name="google_login_button">Continue with Google</string>
    <string name="back_button">Go Back</string>"
</resources>